<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GSM Alarm Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="arm">ARM</string>
    <string name="disarm">DISARM</string>
    <string name="check">CHECK</string>
    <string name="relay_on">RELAY_ON</string>
    <string name="relay_off">RELAY_OFF</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

</resources>